--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js"
+    "start": "nodemon app.js",
+     "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
-    "nodemon": "^3.1.4"
+    "netlify-cli": "^17.34.1",
+    "netlify-lambda": "^2.0.16",
+    "nodemon": "^3.1.4",
+    "serverless-http": "^3.2.0"
   }
 }
